# plastiglom

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
exercises/: seed_tagpool.example.yaml
exercises/main/: main-body-check.md  main-evening-review.md  main-morning-intentions.md  main-social-ledger.md  main-values-drift.md
exercises/secondary/: secondary-values-drift-followup.md
scripts/: finalize.py  fire.py
src/plastiglom/: __init__.py
src/plastiglom/apps/analyzer/: __init__.py  __main__.py  analyzer.py  digest.py
src/plastiglom/apps/archiver/: __init__.py  __main__.py  archiver.py
src/plastiglom/apps/memory_indexer/: __init__.py  indexer.py
src/plastiglom/apps/meta_engine/: __init__.py  proposals.py
src/plastiglom/apps/scheduler/: __init__.py  __main__.py  scheduler.py
src/plastiglom/apps/seeder/: __init__.py  __main__.py  seed_tagpool.py
src/plastiglom/apps/tagger/: __init__.py  __main__.py  tagger.py
src/plastiglom/apps/telegram_bot/: __init__.py  notifier.py
src/plastiglom/apps/web_app/: __init__.py  __main__.py  app.py  lookup.py  templates.py
tests/: conftest.py  test_archiver.py  test_core_models.py  test_digest.py  test_hubs.py  test_llm_router.py  test_notifier.py  test_scheduler.py  test_seeder.py  test_tagpool.py  test_vault_roundtrip.py  test_web_app.py
